Add RainbowHeader to shop, account, and account_admin pages

--- a/app/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/app/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Native splash disabled - using Flutter splash screen instead -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <bitmap android:gravity="fill" android:src="@drawable/background"/>
-    </item>
-    <item>
-        <bitmap android:gravity="fill" android:src="@drawable/splash"/>
+        <color android:color="#FFFFFF"/>
     </item>
 </layer-list>
